@@ -24,6 +24,16 @@ Patches are signed using one of the
 
 <security>
 
+<item name="NULL pointer dereference while writing client request body"
+      severity="medium"
+      advisory="http://mailman.nginx.org/pipermail/nginx-announce/2016/"
+      cve="2016-4450"
+      good="1.11.1+, 1.10.1+"
+      vulnerable="1.3.9-1.11.0">
+<patch name="patch.2016.write.txt" versions="1.9.13-1.11.0" />
+<patch name="patch.2016.write2.txt" versions="1.3.9-1.9.12" />
+</item>
+
 <item name="Invalid pointer dereference in resolver"
       severity="medium"
       advisory="http://mailman.nginx.org/pipermail/nginx-announce/2016/000169.html"
