@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.11.1" />
 <item ver="1.11.0" />
 
 </download>
@@ -16,6 +17,7 @@
 
 <download tag="stable" changes="1.10">
 
+<item ver="1.10.1" />
 <item ver="1.10.0" />
 <item ver="1.9.15" />
 <item ver="1.9.14" />
