@@ -1,4 +1,11 @@
 
+Changes with nginx 1.10.1                                        31 May 2016
+
+    *) Security: a segmentation fault might occur in a worker process while
+       writing a specially crafted request body to a temporary file
+       (CVE-2016-4450); the bug had appeared in 1.3.9.
+
+
 Changes with nginx 1.10.0                                        26 Apr 2016
 
     *) 1.10.x stable branch.
