@@ -1,4 +1,11 @@
 
+Changes with nginx 1.11.1                                        31 May 2016
+
+    *) Security: a segmentation fault might occur in a worker process while
+       writing a specially crafted request body to a temporary file
+       (CVE-2016-4450); the bug had appeared in 1.3.9.
+
+
 Changes with nginx 1.11.0                                        24 May 2016
 
     *) Feature: the "transparent" parameter of the "proxy_bind",
